--- a/templates/cards.html
+++ b/templates/cards.html
@@ -10,7 +10,8 @@
          <div class="card card-cascade narrower">
             <!-- Card image -->
             <div class="view view-cascade overlay">
-               <img  class="card-img-top" src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(147).jpg" alt="Card image cap">
+               <img  class="card-img-top" src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(147).jpg"
+                alt="Card image cap">
                <a>
                   <div class="mask rgba-white-slight"></div>
                </a>
@@ -28,7 +29,9 @@
                
 
 
-               <a class="btn btn-outline-danger waves-effect btn-lg btn-block mb-2" data-toggle="collapse" href="#collapseExample1" aria-expanded="false" aria-controls="collapseExample">Critical Violations</a>
+               <a class="btn btn-outline-danger waves-effect btn-lg btn-block mb-2"
+                data-toggle="collapse" href="#collapseExample1" aria-expanded="false" 
+                aria-controls="collapseExample">Critical Violations</a>
               
                <div class="collapse multi-collapse" id="collapseExample1">
                   <div class="mt-3">
